# 2p_imaging

./: .gitignore  2AFC_2p_analysis  README.md  environment-preprocessing-qc.yml  mkdocs.yml  preprocessing_qc_slurm_pipeline.md  pyproject.toml  requirements-docs.txt  run_postprocess.py
2AFC/: .gitignore  Main.py  globus_mc11_download_no_raw.sh  mc11_no_raw_batch.resolved.txt  mc11_no_raw_batch.txt
2p_2AFC_double_block_version/: Main.py  Main.sh
2p_2AFC_reg_version/: Main.py
2p_post_process_module_202404/: README.md  aggregated_analysis_results.csv  averaged_analysis_results.csv  neurons.csv  output_array.txt  run_postprocess.py  run_postprocess.sh  spike_analysis_results.csv  timings.csv
2p_processing_pipeline_202401/: README.md  config_dendrite.json  config_neuron.json  config_neuron_1chan.json  run_postprocess.py  run_suite2p_pipeline.py  run_suite2p_pipeline.sh
PupilTime/: ReadTime.py  main.py
docs/: closed-loop.md  ebc.md  index.md  joystick.md  manual-roi-gui.md  manual-roi-prepare.md  manual-roi-workflow.md  passive.md  postprocessing.md  preprocessing.md  processing-quickstart.md  roi-reviewer-exports.md  twoafc.md  utils_2p_duplicate_inventory.md  workflow.md
ebc_basic_202410/: main.py  visualization_VIPG8.py
ebc_data_analysis/: 2p_preprocess.py  Calcium_transient.ipynb  adaptation.py  adaptation_summary.py  beh_preprocess.py  bpod_check.py  br_summary.py  check_transition.py  explore_mat.py  mat_to_dict_test.py  mouse_avg_summaries.py  sample_execution.ipynb  session_analysis.py  summary.py  transition.py  transition_meta.py  validation.py
(+485 files in other folders)
